--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
             <h1>Library</h1>
         </div>
         <div class="button-container"><button>Add</button></div>
+        <div class="modal" id="modal">
+            <div class="modal-header">
+                <button class="close-button">&times;</button>
+            </div>
+            <form id="form" action="">
+                <legend>New Book</legend>
+                <p>
+                    <label for="title">Title</label>
+                    <input id="title" type="text" name="title" placeholder="What is the title of the book?">
+                </p>
+                <p>
+                    <label for="author">Author</label>
+                    <input id="author" type="text" name="author" placeholder="Who is the author of the book?">
+                </p>
+                <p>
+                    <label for="pages">Pages</label>
+                    <input type="number" name="pages" id="pages" placeholder="How many pages are in the book?" min="1">
+                </p>
+                <p>
+                    <label for="read">I have read this book</label>
+                    <input type="checkbox" name="read" id="read">
+                </p>
+                <button>ADD A NEW BOOK</button>
+            </form>
+        </div>
+        <div id="overlay"></div>
         <div class="content">
             <table>
                 <thead>
