--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <h1>Library</h1>
         </div>
-        <div class="button-container"><button>Add</button></div>
+        <div class="button-container"><button class="show-modal-button">Add</button></div>
         <div class="modal" id="modal">
             <div class="modal-header">
                 <button class="close-button">&times;</button>
@@ -34,7 +34,7 @@
                     <label for="read">I have read this book</label>
                     <input type="checkbox" name="read" id="read">
                 </p>
-                <button>ADD A NEW BOOK</button>
+                <button class="form-button">ADD A NEW BOOK</button>
             </form>
         </div>
         <div id="overlay"></div>
