Change button class names

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="header">
             <h1>Library</h1>
         </div>
-        <div class="button-container"><button class="show-modal-button">Add</button></div>
+        <div class="button-container"><button class="open-modal-button">Add</button></div>
         <div class="modal" id="modal">
             <div class="modal-header">
-                <button class="close-button">&times;</button>
+                <button class="modal-close-button">&times;</button>
             </div>
             <form id="form" action="">
                 <legend>New Book</legend>
