Change button type

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <label for="read">I have read this book</label>
                     <input type="checkbox" name="read" id="read">
                 </p>
-                <button type="button" class="form-button">ADD A NEW BOOK</button>
+                <button class="form-button">ADD A NEW BOOK</button>
             </form>
         </div>
         <div id="overlay"></div>
