--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <div class="form-wrapper">
                     <p>
                         <label for="title">Title</label>
-                        <input id="title" type="text" name="title" placeholder="What is the title of the book?">
+                        <input id="title" type="text" name="title" placeholder="What is the title of the book?" required>
                     </p>
                     <p>
                         <label for="author">Author</label>
-                        <input id="author" type="text" name="author" placeholder="Who is the author of the book?">
+                        <input id="author" type="text" name="author" placeholder="Who is the author of the book?" required>
                     </p>
                     <p>
                         <label for="pages">Pages</label>
-                        <input type="number" name="pages" id="pages" placeholder="How many pages are in the book?" min="1">
+                        <input type="number" name="pages" id="pages" placeholder="How many pages are in the book?" min="1" required>
                     </p>
                     <p>
                         <label for="read">I have read this book</label>
